<resources>
    <string name="app_name"> SAM Umerkot English </string>
    <string name="btnSync">Click for Sync</string>
    <string name="btnUpload">Click for Upload</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="ts1heading">SECTION 1: Identification Information </string>
    <string name="ts2heading">SECTION 2: Child Anthropometry </string>
    <string name="ts3heading">SECTION 3: Child Morbidity </string>
    <string name="ts4heading">SECTION 4: Child Recovery Assessment </string>
    <string name="ts5heading">SECTION 5: Compliance Assessment </string>
    <string name="ts6heading">SECTION 6: Treatment Outcome And Supplementation  </string>
    <string name="ts7heading">SECTION 7: Exit criteria from study for SAM </string>
    <string name="ts8heading">SECTION 8: Exit criteria from study for MAM </string>
    <string name="seca"> SECTION A: Address &amp; Identification Information </string>
    <string name="secb"> SECTION B: Screening for SAM Cases </string>
    <string name="secc"> SECTION C: HH Size &amp; Study Participants </string>
    <string name="secd"> SECTION D: Child Information &amp; Anthropometry </string>
    <string name="sece"> SECTION E: Child Morbidity &amp; Care Seeking </string>
    <string name="secf"> SECTION F: HH Socioeconomic Information </string>
    <string name="secg"> SECTION G: Hand Washing </string>
    <string name="sech"> SECTION H: HFIAS Measurement Tool </string>
    <string name="seci"> SECTION I: Income Sources </string>
    <string name="secj"> SECTION J: Study Group &amp; Supplementation </string>
    <string name="splashText">Supporting Women and Girls in Pakistan Scaling Up\n
    Empowerment and Care  Strategies  to Address Health and Survival\n
    Centre of Excellence Women &amp; Child Health\n
    Aga Khan University, Karachi, Pakistan</string>
    <string name="a119"> A119:\t Result of Household Questionnaire interview: </string>
    <string name="a119hint"> Discuss any result not completed with team leader. </string>
    <string name="a119a"> Completed</string>
    <string name="a119b"> No household member at home or no competent respondent at home at time of visit</string>
    <string name="a119c"> Entire household absent for extended period of time </string>
    <string name="a119d"> Refused</string>
    <string name="a119e"> Dwelling vacant or address not a dwelling </string>
    <string name="a119f"> Dwelling not found </string>
    <string name="a119g"> No Child between 5 &#8211; 10 Years </string>
    <string name="a119h"> HH Having a child of 5 &#8211; 10 Years age group with Chronic Disease </string>
    <string name="a119i"> HH having a child of 5 &#8211; 10 Years age group which is part of any nutrition study </string>
    <string name="a119x"> Other</string>
    <string name="end_interview"> Form End </string>
    <string name="yes"> Yes </string>
    <string name="no"> No </string>
    <string name="dkn"> Don\'t Know </string>
    <string name="none"> None </string>
    <string name="never"> Never </string>
    <string name="nap"> Not Applicable </string>
    <string name="nav"> Not Available </string>
    <string name="ref"> Refused </string>
    <string name="other"> Other </string>
    <string name="specify"> Specify </string>
    <string name="year"> Years </string>
    <string name="month"> Months </string>
    <string name="weeks"> Weeks </string>
    <string name="days"> Days </string>
    <string name="hours"> Hours </string>
    <string name="minutes"> Minutes </string>
    <string name="kg"> Kilograms </string>
    <string name="km"> Kilometers </string>
    <string name="cm"> Centimeters </string>
    <string name="in"> Inches </string>
    <string name="rupees"> Rupees </string>
    <string name="num"> Number </string>
    <string name="name"> Name </string>
    <string name="c_name">Child Name </string>
    <string name="f_name"> Father Name </string>
    <string name="m_name"> Mother Name </string>
    <string name="s1q1">Name  of Health Care Facility</string>
    <string name="s1q2">Taluka Name</string>
    <string name="s1q3">Village Name</string>
    <string name="s1q4">Address</string>
    <string name="s1q5">Name of Data Collector 01</string>
    <string name="s1q6">Name of Data Collector 02</string>
    <string name="s1q7">Date of recruitment</string>
    <string name="s1q8">Has the parents/legal guardian agreed to participate and given the consent?</string>
    <string name="s1q8a">Yes</string>
    <string name="s1q8b">No.</string>
    <string name="s1q8r">Reason for not given consent</string>
    <string name="s2t">Screening for SAM Cases</string>
    <string name="muac1">MUAC-01</string>
    <string name="muac2">MUAC-02</string>
    <string name="s2q1">MUAC &lt;11.5 cm</string>
    <string name="s2q1a">Yes</string>
    <string name="s2q1b">No.</string>
    <string name="s2q2">Bilateral pitting oedema?</string>
    <string name="s2q2_info">Note: Grades of Oedema-Definition : 1) Absent, 2)Grade + Mild: Both feet/ankles, 3) Grade++Moderate: Both feet, plus lower legs, hands or lower arms, 4) Grade+++Severe: Generalized oedema including both feet, legs, hands, arms and face</string>
    <string name="s2q2a">None</string>
    <string name="s2q2b">Bilateral pitting oedema +</string>
    <string name="s2q2c">Bilateral pitting oedema ++</string>
    <string name="s2q2d">Bilateral pitting oedema +++</string>
    <string name="s2q3">Presence of appetite for RUTF/RUSF?</string>
    <string name="s2q3a">Yes</string>
    <string name="s2q3b">No.</string>
    <string name="s2q4">If Yes then rank : -	Appetite returned (eats at least 75% of RUTF+RUSF)</string>
    <string name="s2q4a">Good(Child takes RUTF/RUSF) eagerly</string>
    <string name="s2q4b">Poor(Child takes RUTF/RUSF with persistent encouragement)</string>
    <string name="s2q4c">Refused (Child refuses RUTF/RUSF even after persistent encouragement</string>
    <string name="s2q5_subtitle">Presence of any medical complication?</string>
    <string name="s2q4_instruction">Appetite returned (eats at least 75% of RUTF+RUSF)</string>
    <string name="s2q501">Anorexia, no appetite for RUTF/RUSF</string>
    <string name="s2q501a">Yes</string>
    <string name="s2q501b">No.</string>
    <string name="s2q502">Vomits everything</string>
    <string name="s2q503">Hypothermia ≤35.5o c</string>
    <string name="s2q504">Severe pneumonia</string>
    <string name="s2q505">Severe dehydration</string>
    <string name="s2q506">Severe anemia</string>
    <string name="s2q507">Not alert(very weak. lethargic, unconscious ,fits or convulsion)</string>
    <string name="s2q508">Conditions requiring IV infusion or NG tube feeding</string>
    <string name="s2q502a">Yes</string>
    <string name="s2q503a">Yes</string>
    <string name="s2q504a">Yes</string>
    <string name="s2q505a">Yes</string>
    <string name="s2q506a">Yes</string>
    <string name="s2q507a">Yes</string>
    <string name="s2q508a">Yes</string>
    <string name="s2q502b">No.</string>
    <string name="s2q503b">No.</string>
    <string name="s2q504b">No.</string>
    <string name="s2q505b">No.</string>
    <string name="s2q506b">No.</string>
    <string name="s2q507b">No.</string>
    <string name="s2q508b">No.</string>
    <string name="s2q6">Is child involved in another research trial or supplemental feeding program?</string>
    <string name="s2q6a">Yes</string>
    <string name="s2q6b">No.</string>
    <string name="s2q7">Is child developmentally delayed?</string>
    <string name="s2q8">Child has a chronic debilitating illness such as cerebral palsy (not including HIV or TB)?</string>
    <string name="s2q9">Child had a history of milk or peanut allergy?</string>
    <string name="s2q7a">Yes</string>
    <string name="s2q8a">Yes</string>
    <string name="s2q9a">Yes</string>
    <string name="s2q7b">No.</string>
    <string name="s2q8b">No.</string>
    <string name="s2q9b">No.</string>
    <string name="s2q29_instruction">-	Child will be enrolled if Yes in Q 2.1,2.3 and Q 2.4 response is 1 “Good” and No in Q 2.5, 2.6, 2.7, 2.8 &amp; 2.9</string>
    <string name="s2q29_instruction2">-	Children will not be enrolled in the trial who involved in another research trial or supplemental feeding program, are developmentally delayed, have a chronic debilitating illness such as cerebral palsy (not including HIV or TB), hereditary blood disease or had a history of milk or peanut allergy. </string>
    <string name="s3qa">Children &lt; 6 months</string>
    <string name="s3qb">Children 6-23 months</string>
    <string name="s3qc">Children 24-59 months</string>
    <string name="s3qd">Adult Males</string>
    <string name="s3qe">Adult Females</string>
    <string name="s3qf">Total family members</string>
    <string name="s4q1">Type of study group</string>
    <string name="s4q1a">Pink</string>
    <string name="s4q1b">Blue</string>
    <string name="s4q1c">Green</string>
    <string name="s4q1d">Brown</string>
    <string name="s4q2">Child Study Id</string>
    <string name="s4q3">Child Name</string>
    <string name="s4q4">Child Father Name</string>
    <string name="s4q5">Child Mother Name</string>
    <string name="s4q6">Child gender</string>
    <string name="s4q6a">Male</string>
    <string name="s4q6b">Female</string>
    <string name="s4q7">Child Date of brith or Age at recruitment</string>
    <string name="s4q7a">Date of Birth</string>
    <string name="s4q7b">Age at the time of recruitment</string>
    <string name="s4q7dob">Date of Birth</string>
    <string name="s4q7days">Age in Days</string>
    <string name="s4q7mon">Age in Months</string>
    <string name="s4q8">Was the child born full-term?</string>
    <string name="s4q8a">Yes</string>
    <string name="s4q8b">No.</string>
    <string name="s4q9">Gestational age at birth in weeks ?</string>
    <string name="s4q10">Was (Name) weighed at birth?</string>
    <string name="s7q1">Do you have any soap or detergent in your household for hand washing? </string>
    <string name="s7q101">Yes</string>
    <string name="s7q102">No</string>
    <string name="s7q2">If yes, what type of soap do you have in your household?</string>
    <string name="s7q201">Bar soap</string>
    <string name="s7q202">Detergent (powder/liquid/paste) </string>
    <string name="s7q203">Liquid soap </string>
    <string name="s7q204">Ash/mud/sand  </string>
    <string name="s7q205">Dont Know</string>
    <string name="s7q3">In what situations do you wash your hands with soap?  This is an open-ended question. Do not read the answer choices.  After the respondent stops listing times, ask “Are there any other situations where you wash your hands with soap?” Keep asking this question until the respondent thinks there are no other times. </string>
    <string name="s7q301">Before preparing food</string>
    <string name="s7q302">Before cooking food</string>
    <string name="s7q303">Before eating</string>
    <string name="s7q304">Before feeding a child</string>
    <string name="s7q305">Before breastfeeding</string>
    <string name="s7q306">After cleaning a child’s anus</string>
    <string name="s7q307">After changing a baby’s nappy</string>
    <string name="s7q308">After disposing of children’s feces</string>
    <string name="s7q309">After you defecate</string>
    <string name="s7q396">Other (Specify)</string>
</resources>