<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.ctsam.ui.sections.SectionGActivity" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/fldGrpSectionG"
            style="@style/vlinearlayout">

            <!-- s7q1  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVs7q1"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom">

                        <TextView
                            android:id="@+id/qtxt_s7q1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/q_s7q1"
                            android:text="@string/s7q1" />

                        <TextView
                            android:id="@+id/q_s7q1"
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@id/qtxt_s7q1"
                            android:layout_alignBottom="@id/qtxt_s7q1"
                            android:text="@string/Q_s7q1" />
                    </RelativeLayout>


                    <RadioGroup
                        android:id="@+id/s7q1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/s7q101"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/s7q101" />

                        <RadioButton
                            android:id="@+id/s7q102"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/s7q102" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- s7q2  CheckBox   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVs7q2"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom">

                        <TextView
                            android:id="@+id/qtxt_s7q2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/q_s7q2"
                            android:text="@string/s7q2" />

                        <TextView
                            android:id="@+id/q_s7q2"
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@id/qtxt_s7q2"
                            android:layout_alignBottom="@id/qtxt_s7q2"
                            android:text="@string/Q_s7q2" />
                    </RelativeLayout>


                    <LinearLayout
                        android:id="@+id/s7q2check"
                        style="@style/vlinearlayout"
                        android:tag="0">

                        <CheckBox
                            android:id="@+id/s7q201"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/s7q201" />

                        <CheckBox
                            android:id="@+id/s7q202"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/s7q202" />

                        <CheckBox
                            android:id="@+id/s7q203"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/s7q203" />

                        <CheckBox
                            android:id="@+id/s7q204"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/s7q204" />

                        <CheckBox
                            android:id="@+id/s7q205"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/s7q205" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- s7q3  CheckBox   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVs7q3"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom">

                        <TextView
                            android:id="@+id/qtxt_s7q3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/q_s7q3"
                            android:text="@string/s7q3" />

                        <TextView
                            android:id="@+id/q_s7q3"
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@id/qtxt_s7q3"
                            android:layout_alignBottom="@id/qtxt_s7q3"
                            android:text="@string/Q_s7q3" />
                    </RelativeLayout>


                    <LinearLayout
                        android:id="@+id/s7q3check"
                        style="@style/vlinearlayout"
                        android:tag="0">

                        <CheckBox
                            android:id="@+id/s7q301"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/s7q301" />

                        <CheckBox
                            android:id="@+id/s7q302"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/s7q302" />

                        <CheckBox
                            android:id="@+id/s7q303"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/s7q303" />

                        <CheckBox
                            android:id="@+id/s7q304"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/s7q304" />

                        <CheckBox
                            android:id="@+id/s7q305"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/s7q305" />

                        <CheckBox
                            android:id="@+id/s7q306"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/s7q306" />

                        <CheckBox
                            android:id="@+id/s7q307"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/s7q307" />

                        <CheckBox
                            android:id="@+id/s7q308"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/s7q308" />

                        <CheckBox
                            android:id="@+id/s7q309"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/s7q309" />

                        <CheckBox
                            android:id="@+id/s7q396"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/s7q396" />

                        <EditText
                            android:id="@+id/s7q396x"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:layout_marginBottom="12dp"
                            android:hint="@string/s7q396"
                            android:tag="s7q396"
                            android:visibility='@{s7q396.checked? View.VISIBLE : View.GONE}' />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!--EndButton LinearLayout-->
            <LinearLayout
                style="@style/hlinearlayout"
                android:layout_gravity="end"
                android:layout_marginTop="18dp">

                <Button
                    android:id="@+id/btn_End"
                    style="@style/buttonEnd"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="End" />

                <Button
                    android:id="@+id/btn_Continue"
                    style="@style/buttonNext"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="Save" />
                <!--EndButton LinearLayout-->
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>